refactoring groupBy command